# Disintegration

./: CMakeLists.txt  README.adoc
Data/gt/: 0.seg  1.seg  2.seg  4.seg  6.seg
Data/shapes/: 0.off  1.off  2.off  4.off  6.off
include/: util.h
src/: main.cpp  util.cpp
